<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/registerHeaderTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/textRegisterHeaderTV"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#4909B8"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:src="@drawable/person_circle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/loginET"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/hintLoginET"
        android:textColor="@color/white"
        android:textColorHint="#8A7A7A"
        android:backgroundTint="#8A7A7A"
        android:background="@drawable/button_border"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:hint="@string/hintPasswordET"
        android:textColor="@color/white"
        android:textColorHint="#8A7A7A"
        android:backgroundTint="#8A7A7A"
        android:background="@drawable/button_border"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/textRegisterBTN"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/enterBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/textEnterBTN"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"/>

</FrameLayout>