<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInFragment"
    android:background="@drawable/main_background">


    <TextView
        android:id="@+id/loginHeaderTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/textLoginHeaderTV"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#4909B8"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:src="@drawable/person_circle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/loginEnterET"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/hintLoginEnterET"
        android:textColor="@color/white"
        android:textColorHint="#8A7A7A"/>

    <EditText
        android:id="@+id/passwordEnterET"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:hint="@string/hintPasswordEnterET"
        android:textColor="@color/white"
        android:textColorHint="#8A7A7A"/>

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/textLoginBTN"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"/>

</FrameLayout>